# smcc

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: aarch64-gcc.cmake
include/: smcc.h
src/: CMakeLists.txt  printf_bare_metal.c  smcc.c  smccc.c
src/include/: smcc.h  smccc.h
